ours/parser.output
Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_GLOBAL_CMD_LIST

    2 NT_GLOBAL_CMD_LIST: NT_GLOBAL_CMD TM_SEMICOL NT_GLOBAL_CMD_LIST
    3                   | NT_GLOBAL_CMD TM_SEMICOL

    4 NT_GLOBAL_CMD: TM_VAR NT_NAMED_HEAD
    5              | NT_FUNC_HEAD TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE
    6              | NT_TEMPLATE_FUNC_HEAD TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE
    7              | NT_PROC_HEAD TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE
    8              | TM_FUNC NT_NAMED_HEAD
    9              | NT_TEMPLATE_HEAD TM_FUNC NT_NAMED_HEAD
   10              | TM_FUNC TM_VOID TM_IDENT TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN

   11 NT_LOCAL_CMD_LIST: NT_LOCAL_CMD TM_SEMICOL NT_LOCAL_CMD_LIST
   12                  | NT_LOCAL_CMD TM_SEMICOL

   13 NT_LOCAL_CMD: TM_VAR NT_NAMED_HEAD
   14             | NT_FOR_CMD

   15 NT_FOR_CMD: NT_EXPR TM_ASGNOP NT_EXPR
   16           | NT_IF_HEAD TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_THEN TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE
   17           | NT_WHILE_HEAD TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE
   18           | NT_DO_HEAD TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   19           | NT_FOR_HEAD TM_LEFT_PAREN NT_FOR_CMD TM_SEMICOL NT_EXPR TM_SEMICOL NT_FOR_CMD TM_RIGHT_PAREN TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE
   20           | TM_CONTINUE
   21           | TM_SKIP
   22           | TM_BREAK
   23           | TM_RETURN
   24           | TM_RETURN NT_EXPR
   25           | NT_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   26           | NT_EXPR TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN

   27 NT_EXPR0: TM_NAT
   28         | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   29         | TM_IDENT

   30 NT_EXPR1: TM_NOT NT_EXPR
   31         | NT_EXPR0

   32 NT_EXPR: NT_EXPR1
   33        | TM_MINUS NT_EXPR
   34        | TM_MUL NT_EXPR
   35        | TM_ADDROF NT_EXPR
   36        | NT_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   37        | NT_EXPR TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN
   38        | NT_EXPR TM_LT NT_ANNON_HEAD TM_GT
   39        | NT_EXPR TM_MUL NT_EXPR
   40        | NT_EXPR TM_PLUS NT_EXPR
   41        | NT_EXPR TM_MINUS NT_EXPR
   42        | NT_EXPR TM_DIV NT_EXPR
   43        | NT_EXPR TM_MOD NT_EXPR
   44        | NT_EXPR TM_LT NT_EXPR
   45        | NT_EXPR TM_GT NT_EXPR
   46        | NT_EXPR TM_LE NT_EXPR
   47        | NT_EXPR TM_GE NT_EXPR
   48        | NT_EXPR TM_EQ NT_EXPR
   49        | NT_EXPR TM_NE NT_EXPR
   50        | NT_EXPR TM_AND NT_EXPR
   51        | NT_EXPR TM_OR NT_EXPR

   52 NT_NAMED_RIGHT_EXPR: TM_IDENT
   53                    | TM_MUL NT_NAMED_RIGHT_EXPR
   54                    | NT_NAMED_RIGHT_EXPR TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   55                    | NT_NAMED_RIGHT_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   56                    | TM_LEFT_PAREN NT_NAMED_RIGHT_EXPR TM_RIGHT_PAREN

   57 NT_COMPLEX_ARGUMENT_TYPE_LIST: NT_NAMED_HEAD TM_COMMA NT_COMPLEX_ARGUMENT_TYPE_LIST
   58                              | NT_NAMED_HEAD
   59                              | NT_ANNON_HEAD TM_COMMA NT_COMPLEX_ARGUMENT_TYPE_LIST
   60                              | NT_ANNON_HEAD

   61 NT_ANNON_RIGHT_EXPR: TM_MUL
   62                    | TM_LEFT_PAREN TM_RIGHT_PAREN
   63                    | TM_MUL NT_ANNON_RIGHT_EXPR
   64                    | NT_ANNON_RIGHT_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   65                    | NT_ANNON_RIGHT_EXPR TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   66                    | TM_LEFT_PAREN NT_ANNON_RIGHT_EXPR TM_RIGHT_PAREN
   67                    | TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN

   68 NT_EXPR_TYPE_LIST: NT_EXPR TM_COMMA NT_EXPR_TYPE_LIST
   69                  | NT_EXPR

   70 NT_TYPE_NAME: TM_INTTYPE
   71             | TM_TEMPLATE_TYPENAME

   72 NT_FUNC_HEAD: TM_FUNC NT_NAMED_HEAD

   73 NT_TEMPLATE_HEAD: TM_TEMPLATE TM_LT TM_TYPENAME TM_IDENT TM_GT

   74 NT_TEMPLATE_FUNC_HEAD: NT_TEMPLATE_HEAD NT_FUNC_HEAD

   75 NT_PROC_HEAD: TM_FUNC TM_VOID TM_IDENT TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN

   76 NT_FOR_HEAD: TM_FOR

   77 NT_WHILE_HEAD: TM_WHILE

   78 NT_DO_HEAD: TM_DO

   79 NT_IF_HEAD: TM_IF

   80 NT_NAMED_HEAD: NT_TYPE_NAME NT_NAMED_RIGHT_EXPR

   81 NT_ANNON_HEAD: NT_TYPE_NAME NT_ANNON_RIGHT_EXPR
   82              | NT_TYPE_NAME


Terminals, with rules where they appear

$end (0) 0
error (256)
TM_NAT (258) 27
TM_IDENT (259) 10 29 52 73 75
TM_LEFT_BRACE (260) 5 6 7 16 17 18 19
TM_RIGHT_BRACE (261) 5 6 7 16 17 18 19
TM_LEFT_PAREN (262) 10 16 17 18 19 25 26 28 36 37 54 55 56 62 64 65
    66 67 75
TM_RIGHT_PAREN (263) 10 16 17 18 19 25 26 28 36 37 54 55 56 62 64 65
    66 67 75
TM_SEMICOL (264) 2 3 11 12 19
TM_COMMA (265) 57 59 68
TM_VAR (266) 4 13
TM_FUNC (267) 8 9 10 72 75
TM_INTTYPE (268) 70
TM_VOID (269) 10 75
TM_IF (270) 79
TM_THEN (271) 16
TM_ELSE (272) 16
TM_WHILE (273) 18 77
TM_DO (274) 17 78
TM_FOR (275) 76
TM_CONTINUE (276) 20
TM_BREAK (277) 22
TM_RETURN (278) 23 24
TM_SKIP (279) 21
TM_ASGNOP (280) 15
TM_OR (281) 51
TM_AND (282) 50
TM_NOT (283) 30
TM_LT (284) 38 44 73
TM_LE (285) 46
TM_GT (286) 38 45 73
TM_GE (287) 47
TM_EQ (288) 48
TM_NE (289) 49
TM_PLUS (290) 40
TM_MINUS (291) 33 41
TM_MUL (292) 34 39 53 61 63
TM_DIV (293) 42
TM_MOD (294) 43
TM_UMINUS (295)
TM_DEREF (296)
TM_ADDROF (297) 35
TM_TYPENAME (298) 73
TM_TEMPLATE (299) 73
TM_TEMPLATE_TYPENAME (300) 71


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
NT_WHOLE (47)
    on left: 1, on right: 0
NT_GLOBAL_CMD_LIST (48)
    on left: 2 3, on right: 1 2
NT_GLOBAL_CMD (49)
    on left: 4 5 6 7 8 9 10, on right: 2 3
NT_LOCAL_CMD_LIST (50)
    on left: 11 12, on right: 5 6 7 11 16 17 18 19
NT_LOCAL_CMD (51)
    on left: 13 14, on right: 11 12
NT_FOR_CMD (52)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26, on right: 14 19
NT_EXPR0 (53)
    on left: 27 28 29, on right: 31
NT_EXPR1 (54)
    on left: 30 31, on right: 32
NT_EXPR (55)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51, on right: 15 16 17 18 19 24 25 26 28 30 33 34 35 36 37 38
    39 40 41 42 43 44 45 46 47 48 49 50 51 68 69
NT_NAMED_RIGHT_EXPR (56)
    on left: 52 53 54 55 56, on right: 53 54 55 56 80
NT_COMPLEX_ARGUMENT_TYPE_LIST (57)
    on left: 57 58 59 60, on right: 10 54 57 59 65 67 75
NT_ANNON_RIGHT_EXPR (58)
    on left: 61 62 63 64 65 66 67, on right: 63 64 65 66 81
NT_EXPR_TYPE_LIST (59)
    on left: 68 69, on right: 26 37 68
NT_TYPE_NAME (60)
    on left: 70 71, on right: 80 81 82
NT_FUNC_HEAD (61)
    on left: 72, on right: 5 74
NT_TEMPLATE_HEAD (62)
    on left: 73, on right: 9 74
NT_TEMPLATE_FUNC_HEAD (63)
    on left: 74, on right: 6
NT_PROC_HEAD (64)
    on left: 75, on right: 7
NT_FOR_HEAD (65)
    on left: 76, on right: 19
NT_WHILE_HEAD (66)
    on left: 77, on right: 17
NT_DO_HEAD (67)
    on left: 78, on right: 18
NT_IF_HEAD (68)
    on left: 79, on right: 16
NT_NAMED_HEAD (69)
    on left: 80, on right: 4 8 9 13 57 58 72
NT_ANNON_HEAD (70)
    on left: 81 82, on right: 38 59 60


state 0

    0 $accept: . NT_WHOLE $end

    TM_VAR       shift, and go to state 1
    TM_FUNC      shift, and go to state 2
    TM_TEMPLATE  shift, and go to state 3

    NT_WHOLE               go to state 4
    NT_GLOBAL_CMD_LIST     go to state 5
    NT_GLOBAL_CMD          go to state 6
    NT_FUNC_HEAD           go to state 7
    NT_TEMPLATE_HEAD       go to state 8
    NT_TEMPLATE_FUNC_HEAD  go to state 9
    NT_PROC_HEAD           go to state 10


state 1

    4 NT_GLOBAL_CMD: TM_VAR . NT_NAMED_HEAD

    TM_INTTYPE            shift, and go to state 11
    TM_TEMPLATE_TYPENAME  shift, and go to state 12

    NT_TYPE_NAME   go to state 13
    NT_NAMED_HEAD  go to state 14


state 2

    8 NT_GLOBAL_CMD: TM_FUNC . NT_NAMED_HEAD
   10              | TM_FUNC . TM_VOID TM_IDENT TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   72 NT_FUNC_HEAD: TM_FUNC . NT_NAMED_HEAD
   75 NT_PROC_HEAD: TM_FUNC . TM_VOID TM_IDENT TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN

    TM_INTTYPE            shift, and go to state 11
    TM_VOID               shift, and go to state 15
    TM_TEMPLATE_TYPENAME  shift, and go to state 12

    NT_TYPE_NAME   go to state 13
    NT_NAMED_HEAD  go to state 16


state 3

   73 NT_TEMPLATE_HEAD: TM_TEMPLATE . TM_LT TM_TYPENAME TM_IDENT TM_GT

    TM_LT  shift, and go to state 17


state 4

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 18


state 5

    1 NT_WHOLE: NT_GLOBAL_CMD_LIST .

    $default  reduce using rule 1 (NT_WHOLE)


state 6

    2 NT_GLOBAL_CMD_LIST: NT_GLOBAL_CMD . TM_SEMICOL NT_GLOBAL_CMD_LIST
    3                   | NT_GLOBAL_CMD . TM_SEMICOL

    TM_SEMICOL  shift, and go to state 19


state 7

    5 NT_GLOBAL_CMD: NT_FUNC_HEAD . TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 20


state 8

    9 NT_GLOBAL_CMD: NT_TEMPLATE_HEAD . TM_FUNC NT_NAMED_HEAD
   74 NT_TEMPLATE_FUNC_HEAD: NT_TEMPLATE_HEAD . NT_FUNC_HEAD

    TM_FUNC  shift, and go to state 21

    NT_FUNC_HEAD  go to state 22


state 9

    6 NT_GLOBAL_CMD: NT_TEMPLATE_FUNC_HEAD . TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 23


state 10

    7 NT_GLOBAL_CMD: NT_PROC_HEAD . TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 24


state 11

   70 NT_TYPE_NAME: TM_INTTYPE .

    $default  reduce using rule 70 (NT_TYPE_NAME)


state 12

   71 NT_TYPE_NAME: TM_TEMPLATE_TYPENAME .

    $default  reduce using rule 71 (NT_TYPE_NAME)


state 13

   80 NT_NAMED_HEAD: NT_TYPE_NAME . NT_NAMED_RIGHT_EXPR

    TM_IDENT       shift, and go to state 25
    TM_LEFT_PAREN  shift, and go to state 26
    TM_MUL         shift, and go to state 27

    NT_NAMED_RIGHT_EXPR  go to state 28


state 14

    4 NT_GLOBAL_CMD: TM_VAR NT_NAMED_HEAD .

    $default  reduce using rule 4 (NT_GLOBAL_CMD)


state 15

   10 NT_GLOBAL_CMD: TM_FUNC TM_VOID . TM_IDENT TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   75 NT_PROC_HEAD: TM_FUNC TM_VOID . TM_IDENT TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN

    TM_IDENT  shift, and go to state 29


state 16

    8 NT_GLOBAL_CMD: TM_FUNC NT_NAMED_HEAD .
   72 NT_FUNC_HEAD: TM_FUNC NT_NAMED_HEAD .

    TM_LEFT_BRACE  reduce using rule 72 (NT_FUNC_HEAD)
    $default       reduce using rule 8 (NT_GLOBAL_CMD)


state 17

   73 NT_TEMPLATE_HEAD: TM_TEMPLATE TM_LT . TM_TYPENAME TM_IDENT TM_GT

    TM_TYPENAME  shift, and go to state 30


state 18

    0 $accept: NT_WHOLE $end .

    $default  accept


state 19

    2 NT_GLOBAL_CMD_LIST: NT_GLOBAL_CMD TM_SEMICOL . NT_GLOBAL_CMD_LIST
    3                   | NT_GLOBAL_CMD TM_SEMICOL .

    TM_VAR       shift, and go to state 1
    TM_FUNC      shift, and go to state 2
    TM_TEMPLATE  shift, and go to state 3

    $default  reduce using rule 3 (NT_GLOBAL_CMD_LIST)

    NT_GLOBAL_CMD_LIST     go to state 31
    NT_GLOBAL_CMD          go to state 6
    NT_FUNC_HEAD           go to state 7
    NT_TEMPLATE_HEAD       go to state 8
    NT_TEMPLATE_FUNC_HEAD  go to state 9
    NT_PROC_HEAD           go to state 10


state 20

    5 NT_GLOBAL_CMD: NT_FUNC_HEAD TM_LEFT_BRACE . NT_LOCAL_CMD_LIST TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 32
    TM_IDENT       shift, and go to state 33
    TM_LEFT_PAREN  shift, and go to state 34
    TM_VAR         shift, and go to state 35
    TM_IF          shift, and go to state 36
    TM_WHILE       shift, and go to state 37
    TM_DO          shift, and go to state 38
    TM_FOR         shift, and go to state 39
    TM_CONTINUE    shift, and go to state 40
    TM_BREAK       shift, and go to state 41
    TM_RETURN      shift, and go to state 42
    TM_SKIP        shift, and go to state 43
    TM_NOT         shift, and go to state 44
    TM_MINUS       shift, and go to state 45
    TM_MUL         shift, and go to state 46
    TM_ADDROF      shift, and go to state 47

    NT_LOCAL_CMD_LIST  go to state 48
    NT_LOCAL_CMD       go to state 49
    NT_FOR_CMD         go to state 50
    NT_EXPR0           go to state 51
    NT_EXPR1           go to state 52
    NT_EXPR            go to state 53
    NT_FOR_HEAD        go to state 54
    NT_WHILE_HEAD      go to state 55
    NT_DO_HEAD         go to state 56
    NT_IF_HEAD         go to state 57


state 21

    9 NT_GLOBAL_CMD: NT_TEMPLATE_HEAD TM_FUNC . NT_NAMED_HEAD
   72 NT_FUNC_HEAD: TM_FUNC . NT_NAMED_HEAD

    TM_INTTYPE            shift, and go to state 11
    TM_TEMPLATE_TYPENAME  shift, and go to state 12

    NT_TYPE_NAME   go to state 13
    NT_NAMED_HEAD  go to state 58


state 22

   74 NT_TEMPLATE_FUNC_HEAD: NT_TEMPLATE_HEAD NT_FUNC_HEAD .

    $default  reduce using rule 74 (NT_TEMPLATE_FUNC_HEAD)


state 23

    6 NT_GLOBAL_CMD: NT_TEMPLATE_FUNC_HEAD TM_LEFT_BRACE . NT_LOCAL_CMD_LIST TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 32
    TM_IDENT       shift, and go to state 33
    TM_LEFT_PAREN  shift, and go to state 34
    TM_VAR         shift, and go to state 35
    TM_IF          shift, and go to state 36
    TM_WHILE       shift, and go to state 37
    TM_DO          shift, and go to state 38
    TM_FOR         shift, and go to state 39
    TM_CONTINUE    shift, and go to state 40
    TM_BREAK       shift, and go to state 41
    TM_RETURN      shift, and go to state 42
    TM_SKIP        shift, and go to state 43
    TM_NOT         shift, and go to state 44
    TM_MINUS       shift, and go to state 45
    TM_MUL         shift, and go to state 46
    TM_ADDROF      shift, and go to state 47

    NT_LOCAL_CMD_LIST  go to state 59
    NT_LOCAL_CMD       go to state 49
    NT_FOR_CMD         go to state 50
    NT_EXPR0           go to state 51
    NT_EXPR1           go to state 52
    NT_EXPR            go to state 53
    NT_FOR_HEAD        go to state 54
    NT_WHILE_HEAD      go to state 55
    NT_DO_HEAD         go to state 56
    NT_IF_HEAD         go to state 57


state 24

    7 NT_GLOBAL_CMD: NT_PROC_HEAD TM_LEFT_BRACE . NT_LOCAL_CMD_LIST TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 32
    TM_IDENT       shift, and go to state 33
    TM_LEFT_PAREN  shift, and go to state 34
    TM_VAR         shift, and go to state 35
    TM_IF          shift, and go to state 36
    TM_WHILE       shift, and go to state 37
    TM_DO          shift, and go to state 38
    TM_FOR         shift, and go to state 39
    TM_CONTINUE    shift, and go to state 40
    TM_BREAK       shift, and go to state 41
    TM_RETURN      shift, and go to state 42
    TM_SKIP        shift, and go to state 43
    TM_NOT         shift, and go to state 44
    TM_MINUS       shift, and go to state 45
    TM_MUL         shift, and go to state 46
    TM_ADDROF      shift, and go to state 47

    NT_LOCAL_CMD_LIST  go to state 60
    NT_LOCAL_CMD       go to state 49
    NT_FOR_CMD         go to state 50
    NT_EXPR0           go to state 51
    NT_EXPR1           go to state 52
    NT_EXPR            go to state 53
    NT_FOR_HEAD        go to state 54
    NT_WHILE_HEAD      go to state 55
    NT_DO_HEAD         go to state 56
    NT_IF_HEAD         go to state 57


state 25

   52 NT_NAMED_RIGHT_EXPR: TM_IDENT .

    $default  reduce using rule 52 (NT_NAMED_RIGHT_EXPR)


state 26

   56 NT_NAMED_RIGHT_EXPR: TM_LEFT_PAREN . NT_NAMED_RIGHT_EXPR TM_RIGHT_PAREN

    TM_IDENT       shift, and go to state 25
    TM_LEFT_PAREN  shift, and go to state 26
    TM_MUL         shift, and go to state 27

    NT_NAMED_RIGHT_EXPR  go to state 61


state 27

   53 NT_NAMED_RIGHT_EXPR: TM_MUL . NT_NAMED_RIGHT_EXPR

    TM_IDENT       shift, and go to state 25
    TM_LEFT_PAREN  shift, and go to state 26
    TM_MUL         shift, and go to state 27

    NT_NAMED_RIGHT_EXPR  go to state 62


state 28

   54 NT_NAMED_RIGHT_EXPR: NT_NAMED_RIGHT_EXPR . TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   55                    | NT_NAMED_RIGHT_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   80 NT_NAMED_HEAD: NT_TYPE_NAME NT_NAMED_RIGHT_EXPR .

    TM_LEFT_PAREN  shift, and go to state 63

    $default  reduce using rule 80 (NT_NAMED_HEAD)


state 29

   10 NT_GLOBAL_CMD: TM_FUNC TM_VOID TM_IDENT . TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   75 NT_PROC_HEAD: TM_FUNC TM_VOID TM_IDENT . TM_LEFT_PAREN NT_COMPLEX_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 64


state 30

   73 NT_TEMPLATE_HEAD: TM_TEMPLATE TM_LT TM_TYPENAME . TM_IDENT TM_GT

    TM_IDENT  shift, and go to state 65


state 31

    2 NT_GLOBAL_CMD_LIST: NT_GLOBAL_CMD TM_SEMICOL NT_GLOBAL_CMD_LIST .

    $default  reduce using rule 2 (NT_GLOBAL_CMD_LIST)


state 32

   27 NT_EXPR0: TM_NAT .

    $default  reduce using rule 27 (NT_EXPR0)


state 33

   29 NT_EXPR0: TM_IDENT .

    $default  reduce using rule 29 (NT_EXPR0)


state 34

   28 NT_EXPR0: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 32
    TM_IDENT       shift, and go to state 33
    TM_LEFT_PAREN  shift, and go to state 34
    TM_NOT         shift, and go to state 44
    TM_MINUS       shift, and go to state 45
    TM_MUL         shift, and go to state 46
    TM_ADDROF      shift, and go to state 47

    NT_EXPR0  go to state 51
    NT_EXPR1  go to state 52
    NT_EXPR   go to state 66


state 35

   13 NT_LOCAL_CMD: TM_VAR . NT_NAMED_HEAD

    TM_INTTYPE            shift, and go to state 11
    TM_TEMPLATE_TYPENAME  shift, and go to state 12

    NT_TYPE_NAME   go to state 13
    NT_NAMED_HEAD  go to state 67


state 36

   79 NT_IF_HEAD: TM_IF .

    $default  reduce using rule 79 (NT_IF_HEAD)


state 37

   77 NT_WHILE_HEAD: TM_WHILE .

    $default  reduce using rule 77 (NT_WHILE_HEAD)


state 38

   78 NT_DO_HEAD: TM_DO .

    $default  reduce using rule 78 (NT_DO_HEAD)


state 39

   76 NT_FOR_HEAD: TM_FOR .

    $default  reduce using rule 76 (NT_FOR_HEAD)


state 40

   20 NT_FOR_CMD: TM_CONTINUE .

    $default  reduce using rule 20 (NT_FOR_CMD)


state 41

   22 NT_FOR_CMD: TM_BREAK .

    $default  reduce using rule 22 (NT_FOR_CMD)


state 42

   23 NT_FOR_CMD: TM_RETURN .
   24           | TM_RETURN . NT_EXPR

    TM_NAT         shift, and go to state 32
    TM_IDENT       shift, and go to state 33
    TM_LEFT_PAREN  shift, and go to state 34
    TM_NOT         shift, and go to state 44
    TM_MINUS       shift, and go to state 45
    TM_MUL         shift, and go to state 46
    TM_ADDROF      shift, and go to state 47

    $default  reduce using rule 23 (NT_FOR_CMD)

    NT_EXPR0  go to state 51
    NT_EXPR1  go to state 52
    NT_EXPR   go to state 68


state 43

   21 NT_FOR_CMD: TM_SKIP .

    $default  reduce using rule 21 (NT_FOR_CMD)


state 44

   30 NT_EXPR1: TM_NOT . NT_EXPR

    TM_NAT         shift, and go to state 32
    TM_IDENT       shift, and go to state 33
    TM_LEFT_PAREN  shift, and go to state 34
    TM_NOT         shift, and go to state 44
    TM_MINUS       shift, and go to state 45
    TM_MUL         shift, and go to state 46
    TM_ADDROF      shift, and go to state 47

    NT_EXPR0  go to state 51
    NT_EXPR1  go to state 52
    NT_EXPR   go to state 69


state 45

   33 NT_EXPR: TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 32
    TM_IDENT       shift, and go to state 33
    TM_LEFT_PAREN  shift, and go to state 34
    TM_NOT         shift, and go to state 44
    TM_MINUS       shift, and go to state 45
    TM_MUL         shift, and go to state 46
    TM_ADDROF      shift, and go to state 47

    NT_EXPR0  go to state 51
    NT_EXPR1  go to state 52
    NT_EXPR   go to state 70


state 46

   34 NT_EXPR: TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 32
    TM_IDENT       shift, and go to state 33
    TM_LEFT_PAREN  shift, and go to state 34
    TM_NOT         shift, and go to state 44
    TM_MINUS       shift, and go to state 45
    TM_MUL         shift, and go to state 46
    TM_ADDROF      shift, and go to state 47

    NT_EXPR0  go to state 51
    NT_EXPR1  go to state 52
    NT_EXPR   go to state 71


state 47

   35 NT_EXPR: TM_ADDROF . NT_EXPR

    TM_NAT         shift, and go to state 32
    TM_IDENT       shift, and go to state 33
    TM_LEFT_PAREN  shift, and go to state 34
    TM_NOT         shift, and go to state 44
    TM_MINUS       shift, and go to state 45
    TM_MUL         shift, and go to state 46
    TM_ADDROF      shift, and go to state 47

    NT_EXPR0  go to state 51
    NT_EXPR1  go to state 52
    NT_EXPR   go to state 72


state 48

    5 NT_GLOBAL_CMD: NT_FUNC_HEAD TM_LEFT_BRACE NT_LOCAL_CMD_LIST . TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 73


state 49

   11 NT_LOCAL_CMD_LIST: NT_LOCAL_CMD . TM_SEMICOL NT_LOCAL_CMD_LIST
   12                  | NT_LOCAL_CMD . TM_SEMICOL

    TM_SEMICOL  shift, and go to state 74


state 50

   14 NT_LOCAL_CMD: NT_FOR_CMD .

    $default  reduce using rule 14 (NT_LOCAL_CMD)


state 51

   31 NT_EXPR1: NT_EXPR0 .

    $default  reduce using rule 31 (NT_EXPR1)


state 52

   32 NT_EXPR: NT_EXPR1 .

    $default  reduce using rule 32 (NT_EXPR)


state 53

   15 NT_FOR_CMD: NT_EXPR . TM_ASGNOP NT_EXPR
   25           | NT_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   26           | NT_EXPR . TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN
   36 NT_EXPR: NT_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   37        | NT_EXPR . TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN
   38        | NT_EXPR . TM_LT NT_ANNON_HEAD TM_GT
   39        | NT_EXPR . TM_MUL NT_EXPR
   40        | NT_EXPR . TM_PLUS NT_EXPR
   41        | NT_EXPR . TM_MINUS NT_EXPR
   42        | NT_EXPR . TM_DIV NT_EXPR
   43        | NT_EXPR . TM_MOD NT_EXPR
   44        | NT_EXPR . TM_LT NT_EXPR
   45        | NT_EXPR . TM_GT NT_EXPR
   46        | NT_EXPR . TM_LE NT_EXPR
   47        | NT_EXPR . TM_GE NT_EXPR
   48        | NT_EXPR . TM_EQ NT_EXPR
   49        | NT_EXPR . TM_NE NT_EXPR
   50        | NT_EXPR . TM_AND NT_EXPR
   51        | NT_EXPR . TM_OR NT_EXPR

    TM_LEFT_PAREN  shift, and go to state 75
    TM_ASGNOP      shift, and go to state 76
    TM_OR          shift, and go to state 77
    TM_AND         shift, and go to state 78
    TM_LT          shift, and go to state 79
    TM_LE          shift, and go to state 80
    TM_GT          shift, and go to state 81
    TM_GE          shift, and go to state 82
    TM_EQ          shift, and go to state 83
    TM_NE          shift, and go to state 84
    TM_PLUS        shift, and go to state 85
    TM_MINUS       shift, and go to state 86
    TM_MUL         shift, and go to state 87
    TM_DIV         shift, and go to state 88
    TM_MOD         shift, and go to state 89


state 54

   19 NT_FOR_CMD: NT_FOR_HEAD . TM_LEFT_PAREN NT_FOR_CMD TM_SEMICOL NT_EXPR TM_SEMICOL NT_FOR_CMD TM_RIGHT_PAREN TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 90


state 55

   17 NT_FOR_CMD: NT_WHILE_HEAD . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 91


state 56

   18 NT_FOR_CMD: NT_DO_HEAD . TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_BRACE  shift, and go to state 92


state 57

   16 NT_FOR_CMD: NT_IF_HEAD . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_THEN TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_LOCAL_CMD_LIST TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 93


state 58

    9 NT_GLOBAL_CMD: NT_TEMPLATE_HEAD TM_FUNC NT_NAMED_HEAD .
   72 NT_FUNC_HEAD: TM_FUNC NT_NAMED_HEAD .

    TM_LEFT_BRACE  reduce using rule 72 (NT_FUNC_HEAD)
    $default       reduce using rule 9 (NT_GLOBAL_CMD)


state 59

    6 NT_GLOBAL_CMD: NT_TEMPLATE_FUNC_HEAD TM_LEFT_BRACE NT_LOCAL_CMD_LIST . TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 94


state 60

    7 NT_GLOBAL_CMD: NT_PROC_HEAD TM_LEFT_BRACE NT_LOCAL_CMD_LIST . TM_RIGHT_BRACE
